crates/astra-cli/src/tui/context_panel/snapshots/astra__tui__context_panel__view__tests__context_panel_empty_80x3.snap
---
source: crates/astra-cli/src/tui/context_panel/view.rs
assertion_line: 2056
expression: "render_panel(&b, 80, 3)"
---
┌ Context · no evidence yet ───────────────────────────────────────────────────┐
│  no context trace yet — run a turn first                                     │
└──────────────────────────────────────────────────────────────────────────────┘
