crates/astra-cli/src/tui/context_panel/snapshots/astra__tui__context_panel__view__tests__context_panel_nested_80x26.snap
---
source: crates/astra-cli/src/tui/context_panel/view.rs
assertion_line: 2644
expression: "render_panel(&b, 80, 26)"
---
┌ Context window (32% · low) ──────────────────────────────────────────────────┐
│  32.5k / 100.0k tokens  current prompt (32.5%)                               │
│  Tab focus · Enter close · j/k scroll · Esc close                            │
│                                                                              │
│  ▄▄▄                               CONTEXT PLAN                              │
│  ▃▃▃  ---------------------------------------------------------------------  │
│  ███  Assemble Request  (est tokens=32500 steps=5)  (never measured)         │
│  ███    ->  System Prompt  (est tokens=4000)  (never measured)               │
│  ▄▄▄          Skills: 1   Repository Memories: 0   Session Snapshot: none    │
│  ███    ->  Tool Surface  (est tokens=6000 tools=0)  (never measured)        │
│  ███          Loaded: 0   Deferred: 0   Per-tool Sum: 2100   Time: 0 ms      │
│  ███    ->  Memory Retrieval  (est tokens=2000)  (never measured)            │
│  ███          Candidates Considered: 0   Selected: 1   Time: 0 ms            │
│  ███    ->  History Assembly  (est tokens=20000 turns=0)  (never measured)   │
│  ███          Retained: 0   Compressed: 0   Dropped: 0                       │
│  ███    ->  Current Turn  (est tokens=500)  (never measured)                 │
│  ███    ->  Compaction  (freed=0 stages=0)                                   │
│  ███  Window: 100000 usable   Free: 67500                                    │
│                                                                              │
│   System prompt                                                              │
│    └ Persona   1.5k tokens                                                   │
│    └ Environment   800 tokens                                                │
│    └ User preferences   200 tokens                                           │
│                                                                              │
│   Tools · /tool                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
