crates/astra-cli/src/tui/context_panel/snapshots/astra__tui__context_panel__view__tests__context_panel_warn_80x14.snap
---
source: crates/astra-cli/src/tui/context_panel/view.rs
assertion_line: 2492
expression: "render_panel(&b, 80, 14)"
---
┌ Context window (70% · warn) ─────────────────────────────────────────────────┐
│  70.5k / 100.0k tokens  current prompt (70.5%)                               │
│  Tab focus · Enter close · j/k scroll · Esc close                            │
│                                                                              │
│  ███                               CONTEXT PLAN                              │
│  ▇▇▇  ---------------------------------------------------------------------  │
│  ▃▃▃  Assemble Request  (est tokens=70500 steps=5)  (never measured)         │
│  ███    ->  System Prompt  (est tokens=8000)  (never measured)               │
│  ███          Skills: 0   Repository Memories: 0   Session Snapshot: none    │
│  ███    ->  Tool Surface  (est tokens=10000 tools=0)  (never measured)       │
│  ███          Loaded: 0   Deferred: 0   Per-tool Sum: 0   Time: 0 ms         │
│  ███    ->  Memory Retrieval  (est tokens=1000)  (never measured)            │
│  ███          Candidates Considered: 0   Selected: 0   Time: 0 ms            │
└──────────────────────────────────────────────────────────────────────────────┘
